added mailcatcher and nodejs

--- a/infrastructure/provisioning/jenkins/playbook.yml
+++ b/infrastructure/provisioning/jenkins/playbook.yml
@@ -91,3 +91,8 @@
       vars:
         docker_users: ["{{ jenkins_process_user }}","vagrant"]
     - role: provisioning/roles/ansible-role-maven
+    - role: provisioning/roles/geerlingguy.nodejs
+      become: yes
+      vars:
+        nodejs_version: "12.x"
+        nodejs_npm_global_packages: [rimraf,mkdirp,copyfiles]
