--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -13,7 +13,9 @@ cluster = {
   "production.local" => { :ip => "192.168.33.13", :cpus => 1, :mem => 512,
   :provision => "ansible",:playbook =>"provisioning/production/playbook.yml",:size => "10GB"},
   "jenkins.local" => { :ip => "192.168.33.14", :cpus => 2, :mem => 2048,
-  :provision => "ansible",:playbook =>"provisioning/jenkins/playbook.yml",:size => "10GB"}
+  :provision => "ansible",:playbook =>"provisioning/jenkins/playbook.yml",:size => "10GB"},
+  "mail.local" => { :ip => "192.168.33.15", :cpus => 1, :mem => 512,
+  :provision => "ansible",:playbook =>"provisioning/mail/playbook.yml",:size => "10GB"}
   # "artifactory.local" => { :ip => "192.168.33.15", :cpus => 1, :mem => 2048,
   # :provision => "ansible",:playbook =>"provisioning/artifactory/playbook.yml",:size => "10GB"}
 }
