--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -15,9 +15,9 @@ cluster = {
   "jenkins.local" => { :ip => "192.168.33.14", :cpus => 2, :mem => 2048,
   :provision => "ansible",:playbook =>"provisioning/jenkins/playbook.yml",:size => "10GB"},
   "mail.local" => { :ip => "192.168.33.15", :cpus => 1, :mem => 512,
-  :provision => "ansible",:playbook =>"provisioning/mail/playbook.yml",:size => "10GB"}
-  # "artifactory.local" => { :ip => "192.168.33.15", :cpus => 1, :mem => 2048,
-  # :provision => "ansible",:playbook =>"provisioning/artifactory/playbook.yml",:size => "10GB"}
+  :provision => "ansible",:playbook =>"provisioning/mail/playbook.yml",:size => "10GB"},
+  "artifactory.local" => { :ip => "192.168.33.16", :cpus => 1, :mem => 1024,
+  :provision => "ansible",:playbook =>"provisioning/artifactory/playbook.yml",:size => "10GB"}
 }
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
@@ -56,7 +56,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     config.vm.define hostname do |cfg|
       cfg.vm.provider :virtualbox do |vb, override|
-        config.vm.box = "ubuntu/bionic64"
+        override.vm.box = "ubuntu/bionic64"
         override.vm.network :private_network, ip: "#{info[:ip]}"
         override.vm.hostname = hostname
         override.disksize.size = "#{info[:size]}"
