--- a/infrastructure/provisioning/artifactory/playbook.yml
+++ b/infrastructure/provisioning/artifactory/playbook.yml
@@ -4,41 +4,88 @@
   hosts: all
 
   vars:
-    artifactory_version: 6.9.6
+    artifactory_data_directory: /opt/artifactory
+    artifactory_image: goodrainapps/artifactory-oss
+    artifactory_expose_port: 8080
 
   tasks:
-    - name: Get Java Path for Setting in JAVA_HOME
-      shell : 'type -p javac|xargs readlink -f|xargs dirname|xargs dirname'
-      args:
-        executable: /bin/bash
-      register: JAVA_PATH
+  - name: restart docker
+    service: 
+      name: docker
+      state: restarted
+    become: yes        
 
-    - name: Setting Java Environment Variable Globally
-      lineinfile: "dest=/etc/environment regexp=^JAVA_HOME= line=JAVA_HOME={{JAVA_PATH.stdout}}"
-      become: yes
+  - name: Create Artifactory Data Directory.
+    file:
+      state: directory
+      path: "{{ artifactory_data_directory }}"
+      mode: "0755"
+    become: yes  
 
-    - name: Source JAVA_HOME
-      shell : 'source /etc/environment'
-      args:
-        executable: /bin/bash    
-
-    - name: Install JFrog Artifactory Using deb
-      apt:
-         deb: https://jfrog.bintray.com/artifactory-debs/pool/main/j/jfrog-artifactory-oss-deb/jfrog-artifactory-oss-{{artifactory_version}}.deb
-      become: yes
-
-    - name: Starting and Enabling artifactory service
-      service:
-        name: artifactory
-        state: started
-        enabled: yes
-      changed_when: false
-      register: get_result
-      until: get_result is success
-      retries: 3
-      delay: 2        
-      become: yes 
+  - name: Run Artifactory Container
+    docker_container:
+      exposed_ports: "{{ artifactory_expose_port }}"
+      image: "{{ artifactory_image }}"
+      name: "artifactory"
+      ports: "{{ artifactory_expose_port }}:{{ artifactory_expose_port }}"
+      volumes:
+        - "{{ artifactory_data_directory }}:{{ artifactory_data_directory }}"
+      pull: "no"
+      restart_policy: "always"
+      state: "started"
+      env:
+        REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY: "{{ artifactory_data_directory }}"
 
   roles:
-    - role: provisioning/roles/geerlingguy.java
-      become: yes
+  - role: provisioning/roles/geerlingguy.docker
+    become: yes
+    vars:
+      docker_users: ["vagrant"]         
+  - role: provisioning/roles/geerlingguy.pip
+    become: yes  
+    vars: 
+      pip_install_packages:
+      - name: docker-py
+
+
+  # Below code can be used to install the latest version of artifactory however it takes considerable amount of RAM atleast 2 GB 
+  # Uncomment below and comment everything upto vars in order to use latest version of artifactory
+  # vars:
+  #   artifactory_version: 6.9.6
+
+  # tasks:
+  #   - name: Get Java Path for Setting in JAVA_HOME
+  #     shell : 'type -p javac|xargs readlink -f|xargs dirname|xargs dirname'
+  #     args:
+  #       executable: /bin/bash
+  #     register: JAVA_PATH
+
+  #   - name: Setting Java Environment Variable Globally
+  #     lineinfile: "dest=/etc/environment regexp=^JAVA_HOME= line=JAVA_HOME={{JAVA_PATH.stdout}}"
+  #     become: yes
+
+  #   - name: Source JAVA_HOME
+  #     shell : 'source /etc/environment'
+  #     args:
+  #       executable: /bin/bash    
+
+  #   - name: Install JFrog Artifactory Using deb
+  #     apt:
+  #        deb: https://jfrog.bintray.com/artifactory-debs/pool/main/j/jfrog-artifactory-oss-deb/jfrog-artifactory-oss-{{artifactory_version}}.deb
+  #     become: yes
+
+  #   - name: Starting and Enabling artifactory service
+  #     service:
+  #       name: artifactory
+  #       state: started
+  #       enabled: yes
+  #     changed_when: false
+  #     register: get_result
+  #     until: get_result is success
+  #     retries: 3
+  #     delay: 2        
+  #     become: yes 
+
+  # roles:
+  #   - role: provisioning/roles/geerlingguy.java
+  #     become: yes
