--- a/infrastructure/provisioning/jenkins/playbook.yml
+++ b/infrastructure/provisioning/jenkins/playbook.yml
@@ -56,6 +56,15 @@
         mode: 0644
       become: yes
 
+    - name: Copy Private SSH Key of Archiver Server for SSH Access
+      copy:
+        src: /vagrant/.vagrant/machines/archiver.local/virtualbox/private_key
+        dest: "{{jenkins_home}}/.ssh/archiver.key"
+        owner: "{{ jenkins_process_user }}"
+        group: "{{ jenkins_process_group }}"
+        mode: 0644
+      become: yes      
+
   roles:
     - role: provisioning/roles/geerlingguy.jenkins
       become: yes
