--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://staging.local:3306/test
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
