--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,6 @@ RUN addgroup boot
 RUN adduser -D -h /home/boot -s /bin/ash boot -G boot
 USER boot
 WORKDIR /home/boot
-ADD target/$FILE_NAME.jar devops.jar
+ADD ./backend/target/$FILE_NAME.jar devops.jar
 EXPOSE 8080
 CMD java -jar devops.jar
