--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:alpine as builder
 WORKDIR /app
 ARG STAGE
-ARG CONFIG
 # Copy project files into the docker image
 COPY ./frontend/  /app
 RUN cd /app && npm run build:$STAGE
@@ -9,6 +8,6 @@ RUN cd /app && npm run build:$STAGE
 FROM nginx:alpine
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /app/dist/frontend /usr/share/nginx/html
-COPY ./$CONFIG /etc/nginx/conf.d/default.conf
+COPY ./frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
