--- a/frontend/nginx-staging.conf
+++ b/frontend/nginx-staging.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  location /api/ {
+  location / {
     proxy_pass http://staging.local:8080;
     proxy_http_version 1.1;
   }
