--- a/frontend/nginx-staging.conf
+++ b/frontend/nginx-staging.conf
@@ -1,7 +1,16 @@
 server {
   listen 80;
   location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
+  location /api/ {
     proxy_pass http://staging.local:8080;
     proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade
   }
 }
