--- a/frontend/nginx-prod.conf
+++ b/frontend/nginx-prod.conf
@@ -11,6 +11,6 @@ server {
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade
+    proxy_cache_bypass $http_upgrade;
   }
 }
