--- a/frontend/nginx-prod.conf
+++ b/frontend/nginx-prod.conf
@@ -6,11 +6,8 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
   location /api/ {
-    proxy_pass http://production.local:8080;
+    proxy_pass http://production.local:8080/;
     proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
   }
 }
