added monitoring plugin

--- a/infrastructure/provisioning/jenkins/playbook.yml
+++ b/infrastructure/provisioning/jenkins/playbook.yml
@@ -101,6 +101,7 @@
           - blueocean
           - mailer
           - ssh-steps
+          - monitoring
       
     - role: provisioning/roles/geerlingguy.docker
       become: yes
