--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven.test.skip>true</maven.test.skip>
+		<spring.vault.version>2.1.1.RELEASE</spring.vault.version>
 	</properties>
 
 	<dependencies>
@@ -55,6 +56,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.vault</groupId>
+			<artifactId>spring-vault-core</artifactId>
+			<version>${spring.vault.version}</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
