added log stash encoder|

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,6 +60,11 @@
 			<groupId>org.springframework.vault</groupId>
 			<artifactId>spring-vault-core</artifactId>
 			<version>${spring.vault.version}</version>
+		</dependency>
+		<dependency> 
+			<groupId>net.logstash.logback</groupId> 
+			<artifactId>logstash-logback-encoder</artifactId> 
+			<version>4.11</version> 
 		</dependency>		
 	</dependencies>
 
