--- a/infrastructure/provisioning/jenkins/playbook.yml
+++ b/infrastructure/provisioning/jenkins/playbook.yml
@@ -20,73 +20,10 @@
           - jq
       become: yes      
 
-    # In order to push docker images to insecure registry special configuration is required.
-    # https://docs.docker.com/registry/insecure/
-    - name: Configure Jenkins to Access insecure docker registry
-      template:
-        src: daemon.json
-        dest: "/etc/docker/daemon.json"
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"
-        mode: 0777
-      register: docker_insecure_registry_access
-      when:
-        - docker_insecure_registry_domain | length > 0
-
-    - name: Create a .ssh Directory before copying Keys
-      file:
-        path: "{{jenkins_home}}/.ssh"
-        state: directory
-        recurse: yes
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"    
-
-#This is a very important step as the files being downloaded in workspace cease to take Jenkin's users permissions.
-# sudo chown -R jenkins:jenkins /var/lib/jenkins/
-    - name: Recursively Apply Permissions for Jenkins user in the jenkins home folder
-      file:
-        path: "{{jenkins_home}}"
-        state: directory
-        recurse: yes
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"
-      become: yes         
-
-    - name: Copy Private SSH Key of Staging Server for SSH Access
-      copy:
-        src: /vagrant/.vagrant/machines/staging.local/virtualbox/private_key
-        dest: "{{jenkins_home}}/.ssh/staging.key"
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"
-        mode: 0644
-      become: yes 
-
-    - name: Copy Private SSH Key of Production Server for SSH Access
-      copy:
-        src: /vagrant/.vagrant/machines/production.local/virtualbox/private_key
-        dest: "{{jenkins_home}}/.ssh/production.key"
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"
-        mode: 0644
-      become: yes
-
-    - name: Copy Private SSH Key of Archiver Server for SSH Access
-      copy:
-        src: /vagrant/.vagrant/machines/archiver.local/virtualbox/private_key
-        dest: "{{jenkins_home}}/.ssh/archiver.key"
-        owner: "{{ jenkins_process_user }}"
-        group: "{{ jenkins_process_group }}"
-        mode: 0644
-      become: yes      
-
-    - name: Immediately restart Docker for accessing insecure registry.
-      service: name=docker state=restarted
-
-    - name: Restart Jenkins as it is giving Docker Daemon Error on startup
-      service: name=jenkins state=restarted      
-
+    - import_tasks: jenkins.yml
+    
   roles:
-    - role: provisioning/roles/geerlingguy.jenkins
+    - role: infrastructure/provisioning/roles/geerlingguy.jenkins
       become: yes
       vars: 
         # Jenkins 
@@ -112,12 +49,12 @@
           - ssh-steps
           - monitoring
       
-    - role: provisioning/roles/geerlingguy.docker
+    - role: infrastructure/provisioning/roles/geerlingguy.docker
       become: yes
       vars:
         docker_users: ["{{ jenkins_process_user }}","vagrant"]
-    - role: provisioning/roles/ansible-role-maven
-    - role: provisioning/roles/geerlingguy.nodejs
+    - role: infrastructure/provisioning/roles/ansible-role-maven
+    - role: infrastructure/provisioning/roles/geerlingguy.nodejs
       become: yes
       vars:
         nodejs_version: "12.x"
