--- a/infrastructure/provisioning/jenkins/vars/main.yml
+++ b/infrastructure/provisioning/jenkins/vars/main.yml
@@ -7,3 +7,4 @@ jenkins_smtp_host: "domain.com"
 jenkins_smtp_use_ssl: "false"
 jenkins_smtp_port: "1025"
 jenkins_smtp_charset: "UTF-8"
+pre_pull_docker_images: ["openjdk:8-jre-alpine","node:12-alpine","nginx:alpine"]
