--- a/infrastructure/provisioning/registry/playbook.yml
+++ b/infrastructure/provisioning/registry/playbook.yml
@@ -29,13 +29,13 @@
         env:
           REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY: "{{ docker_registry_data_directory }}"
 
-  roles:
-  - role: provisioning/roles/geerlingguy.docker
-    vars:
-      docker_users: ["vagrant"]    
-    become: yes         
-  - role: provisioning/roles/geerlingguy.pip
-    become: yes
-    vars: 
-      pip_install_packages:
-      - name: docker-py
+  # roles:
+  # - role: provisioning/roles/geerlingguy.docker
+  #   vars:
+  #     docker_users: ["vagrant"]    
+  #   become: yes         
+  # - role: provisioning/roles/geerlingguy.pip
+  #   become: yes
+  #   vars: 
+  #     pip_install_packages:
+  #     - name: docker-py
