--- a/infrastructure/provisioning/staging/playbook.yml
+++ b/infrastructure/provisioning/staging/playbook.yml
@@ -34,11 +34,22 @@
       (docker_insecure_registry_access is defined and docker_insecure_registry_access.changed)
 
   roles:
-    - role: provisioning/roles/geerlingguy.docker
+    - role: infrastructure/provisioning/roles/geerlingguy.docker
       become: yes
       vars:
         docker_users: [vagrant]
-    - role: provisioning/roles/geerlingguy.pip
+    - role: infrastructure/provisioning/roles/geerlingguy.pip
       vars: 
         pip_install_packages:
         - name: docker-py
+    # - role: infrastructure/provisioning/roles/geerlingguy.filebeat
+    #   vars:
+    #     filebeat_version: 7.x
+    #     filebeat_create_config: true
+    #     filebeat_output_logstash_enabled: true
+    #     filebeat_output_logstash_hosts:
+    #       - "logstash.local:5000"          
+    #     filebeat_inputs:
+    #       - type: log
+    #         paths:
+    #           - "/home/vagrant/logs/*.logs"
