adding elastic and kibana

--- a/hosts.yml
+++ b/hosts.yml
@@ -61,24 +61,24 @@
   provisioner: ansible
   playbook: infrastructure/provisioning/vault/playbook.yml
   size: 10GB
-# - name: elastic.local
-#   ip: 192.168.34.18
-#   cpus: 1
-#   mem: 2048
-#   os: ubuntu
-#   docker: required
-#   provisioner: ansible
-#   playbook: infrastructure/provisioning/elastic/playbook.yml
-#   size: 10GB
-# - name: kibana.local
-#   ip: 192.168.34.19
-#   cpus: 1
-#   mem: 1024
-#   os: ubuntu
-#   docker: not_required
-#   provisioner: shell
-#   playbook: infrastructure/provisioning/kibana/playbook.yml
-#   size: 10GB
+- name: elastic.local
+  ip: 192.168.34.18
+  cpus: 1
+  mem: 2048
+  os: ubuntu
+  docker: required
+  provisioner: ansible
+  playbook: infrastructure/provisioning/elastic/playbook.yml
+  size: 10GB
+- name: kibana.local
+  ip: 192.168.34.19
+  cpus: 1
+  mem: 2048
+  os: ubuntu
+  docker: not_required
+  provisioner: shell
+  playbook: infrastructure/provisioning/kibana/playbook.yml
+  size: 10GB
 - name: logstash.local
   ip: 192.168.34.20
   cpus: 1
