--- a/infrastructure/provisioning/elastic/playbook.yml
+++ b/infrastructure/provisioning/elastic/playbook.yml
@@ -3,8 +3,8 @@
   gather_facts: True
   hosts: all
 
-  tasks:
-    - include_tasks: install.yml
+  # tasks:
+  #   - include_tasks: install.yml
 
   roles:
   - role: infrastructure/provisioning/roles/geerlingguy.java
