--- a/infrastructure/provisioning/kibana/playbook.yml
+++ b/infrastructure/provisioning/kibana/playbook.yml
@@ -2,3 +2,11 @@
 - name: Installs a Kibana Server
   gather_facts: True
   hosts: all
+  
+  roles:
+  - role: infrastructure/provisioning/roles/elk-kibana
+    vars:
+      kibana_server: kibana.local
+      kibana_server_port: 5601
+      elasticsearch_server: "http://elastic.local:9200"
+    become: yes   
