--- a/infrastructure/provisioning/staging/playbook.yml
+++ b/infrastructure/provisioning/staging/playbook.yml
@@ -42,14 +42,7 @@
       vars: 
         pip_install_packages:
         - name: docker-py
-    # - role: infrastructure/provisioning/roles/geerlingguy.filebeat
-    #   vars:
-    #     filebeat_version: 7.x
-    #     filebeat_create_config: true
-    #     filebeat_output_logstash_enabled: true
-    #     filebeat_output_logstash_hosts:
-    #       - "logstash.local:5000"          
-    #     filebeat_inputs:
-    #       - type: log
-    #         paths:
-    #           - "/home/vagrant/logs/*.logs"
+    - role: infrastructure/provisioning/roles/elk-filebeat
+      vars:
+        log_file_locations: ["/home/vagrant/logs"]
+        logstash_server: "logstash.local:5000"
