--- a/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
+++ b/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
@@ -4,6 +4,7 @@ input
     {
         ssl => false
         port => 5000
+        codec => "json"        
     }
 }
 filter {
@@ -14,15 +15,14 @@ filter {
     }
  }
 output {
-  # stdout { codec => rubydebug }
+#  stdout { codec => rubydebug }
    file {
-      path => /home/vagrant/logstash.log
+      path => "/home/vagrant/logs/logstash.log"
       codec => rubydebug
-   }
+     }
     elasticsearch {
-      hosts => [{{elasticsearch_server}}]
+      hosts => ["http://elastic.local:9200"]
       manage_template => false
-      index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
-      document_type => "%{[@metadata][type]}"
+      index => "logstash-%{+YYYY.MM.dd}"
    }
 }
