--- a/infrastructure/provisioning/production/playbook.yml
+++ b/infrastructure/provisioning/production/playbook.yml
@@ -42,3 +42,7 @@
       vars: 
         pip_install_packages:
         - name: docker-py
+    - role: infrastructure/provisioning/roles/elk-filebeat
+      vars:
+        log_file_locations: ["/home/vagrant/logs/*.log"]
+        logstash_server: "logstash.local:5000"        
