--- a/infrastructure/provisioning/roles/elk-kibana/tasks/install.yml
+++ b/infrastructure/provisioning/roles/elk-kibana/tasks/install.yml
@@ -15,6 +15,10 @@
   with_items:
       - apt-transport-https
       - kibana
+  register: get_result
+  until: get_result is success
+  retries: 3
+  delay: 2          
 
 - name: Copy the config file
   template:
