--- a/infrastructure/provisioning/roles/elk-logstash/tasks/install.yml
+++ b/infrastructure/provisioning/roles/elk-logstash/tasks/install.yml
@@ -8,13 +8,19 @@
     repo: deb https://artifacts.elastic.co/packages/7.x/apt stable main
     state: present
 
-- name: Install logstash and pre-requisites
+- name: Install pre-requisites
   package:
-    name: "{{ item }}"
+    name: apt-transport-https
     update_cache: yes
-  with_items:
-      - apt-transport-https
-      - logstash
+
+- name: Install logstash
+  package:
+    name: logstash
+    update_cache: yes
+  register: get_result
+  until: get_result is success
+  retries: 3
+  delay: 2          
 
 - name: Copy the logstash config file
   template:
