--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -64,7 +64,12 @@
 		<dependency> 
 			<groupId>net.logstash.logback</groupId> 
 			<artifactId>logstash-logback-encoder</artifactId> 
-			<version>5.2</version> 
+			<version>5.3</version> 
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.6</version>
 		</dependency>		
 	</dependencies>
 
