--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -67,10 +67,10 @@
 			<version>5.3</version> 
 		</dependency>
 		<dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
-		    <version>20190722</version>
-		</dependency>	
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.6</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
