--- a/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
+++ b/infrastructure/provisioning/roles/elk-logstash/templates/springular.conf
@@ -4,22 +4,31 @@ input
     {
         ssl => false
         port => 5000
-        codec => "json"        
+        codec => "json"       
     }
 }
 filter {
+
    if [tags][json] {
       json {
         source => "message"
       }
     }
+
+  grok {
+    match => [ 
+               "message", 
+               "(?<timestamp>%{YEAR}-%{MONTHNUM}-%{MONTHDAY} %{TIME})  %{LOGLEVEL:level} %{NUMBER:pid} --- \[(?<thread>[A-Za-z0-9-]+)\] [A-Za-z0-9.]*\.(?<class>[A-Za-z0-9#_]+)\s*:\s+(?<logmessage>.*)"
+             ]
+   }
+
  }
 output {
-#  stdout { codec => rubydebug }
-   file {
-      path => "/home/vagrant/logs/logstash.log"
-      codec => rubydebug
-     }
+  stdout { codec => rubydebug }
+   # file {
+   #    path => "/home/vagrant/logs/logstash.log"
+   #    codec => rubydebug
+   #   }
     elasticsearch {
       hosts => ["http://elastic.local:9200"]
       manage_template => false
